<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".forgetPassword">

    <LinearLayout
        android:id="@+id/forgetpassword_codelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/forget_note"
            android:textColor="@color/darkgray"/>

        <EditText
            android:id="@+id/forgetpassword_txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textWebEmailAddress"
            android:hint="@string/hint_email"
            android:drawablePadding="10dp"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/darkgray"
            android:drawableLeft="@drawable/ic_email"/>
        <TextView
            android:id="@+id/forgetpassword_txtavailalecode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_code"
            android:textColor="@color/darkgray"
            android:padding="20dp"/>
        <Button
            android:id="@+id/forgetpassword_btnsend"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/button_style"
            android:text="Send"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/forgetpassword_passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/forget_instruction"
            android:textColor="@color/darkgray"/>

        <EditText
            android:id="@+id/forgetpassword_txtcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/secret_code"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/darkgray"
            android:drawableLeft="@drawable/ic_password"/>
        <EditText
            android:id="@+id/forgetpassword_txtpassowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textWebPassword"
            android:hint="@string/new_password"
            android:drawablePadding="10dp"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/darkgray"
            android:drawableLeft="@drawable/ic_password"/>
        <EditText
            android:id="@+id/forgetpassword_txtcpassowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textWebPassword"
            android:hint="@string/hint_cpassword"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/darkgray"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_password"/>

        <Button
            android:id="@+id/forgetpassword_btnupdate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/button_style"
            android:text="Update"/>
    </LinearLayout>




</LinearLayout>