<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".GetStarted">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_company"/>
        <TextView
            android:id="@+id/start_as_technician"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue_as_Technician"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/darkgray"
            android:onClick="onClick"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/lightgray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@color/background"
            android:textColor="@color/darkgray"
            android:text="@string/or"/>
    </FrameLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_customer"/>
        <TextView
            android:id="@+id/start_as_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue_as_Customer"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkgray"
            android:onClick="onClick"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startas_txtlanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chnage_language"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:padding="20dp"
            android:onClick="onClick"/>



    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/aboutSmartFix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutApp"
            android:textSize="15dp"
            android:textColor="@color/darkgray"
            android:onClick="onClick"
            />



    </LinearLayout>






</LinearLayout>