<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/smart_fix_logo"/>
            <TextView
                android:id="@+id/login_txttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signin"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email"
                    />
                <EditText
                    android:id="@+id/login_txt_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/darkgray"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/darkgray"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_password"
                    />
                <EditText
                    android:id="@+id/login_txt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/darkgray"
                    android:inputType="textWebPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/darkgray"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/login_txt_forgetpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:paddingTop="20dp"
                android:onClick="onClick"/>
            <Button
                android:id="@+id/login_btnlogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/button_style"
                android:text="@string/btn_login"
                />

            <TextView
                android:id="@+id/login_txtsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:paddingTop="20dp"
                android:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>





</LinearLayout>