<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".signup">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/smart_fix_logo"/>
            <TextView
                android:id="@+id/signup_txttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_user"
                    />
                <EditText
                    android:id="@+id/signup_txt_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/darkgray"
                    android:textColor="@color/darkgray"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email"
                    />
                <EditText
                    android:id="@+id/signup_txt_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textWebEmailAddress"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/darkgray"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_password"
                    />
                <EditText
                    android:id="@+id/signup_txt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textWebPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/darkgray"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_password"
                    />
                <EditText
                    android:id="@+id/signup_txt_cpassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cpassword"
                    android:inputType="textWebPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/darkgray"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    />
                <Spinner
                    android:id="@+id/signup_spin_cities"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cpassword"
                    android:inputType="textWebPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/darkgray"
                    android:textColor="@color/darkgray"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                style="@style/button_style"
                android:text="@string/btn_signup"
                android:onClick="regd"
                />
            <TextView
                android:id="@+id/signup_txtsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:padding="20dp"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>